<resources>
    <string name="app_name">Destiny Gear And Guns</string>
    <string name="title_activity_main">Destiny Gear and Guns</string>
    <string name="intro">Destiny Gear and Guns</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">Characters</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="username">Username</string>
    <string name="psn">PSN</string>
    <string name="xbox_live">Xbox Live</string>
    <string name="logo" />
    <string name="title_activity_display_characters_inventory">DisplayCharactersInventory</string>
    <string name="title_activity_display_characters">Characters</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_inventory">Inventory</string>
    <string name="title_activity_inventory">InventoryActivity</string>
</resources>
