<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cs370.gwtm.destinygearandguns.Activity.MainActivity">

    <Button
        android:id="@+id/usernameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-5dp"/>

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/usernameButton"/>

    <EditText
        android:id="@+id/username"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/username"
        android:layout_above="@id/usernameButton"
        android:layout_centerInParent="true" />

    <RadioButton
        android:id="@+id/PSN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_above="@id/username"
        android:text="@string/psn"
        android:textColor="#FFFFFF"
        android:buttonTint="#FFFFFF"
        android:layout_marginStart="-4dp"/>

    <RadioButton
        android:id="@+id/xboxlive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/username"
        android:layout_alignParentEnd="true"
        android:text="@string/xbox_live"
        android:textColor="#FFFFFF"
        android:buttonTint="#FFFFFF"
        android:layout_toEndOf="@id/PSN"/>

    <ImageView
        android:id="@+id/destinylogo"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/PSN"
        android:src="@drawable/destinylogo"
        android:layout_centerInParent="true" />

</RelativeLayout>
